--- a/HelloBitch/lib/x86_64-win64/unit1.lfm
+++ b/HelloBitch/lib/x86_64-win64/unit1.lfm
@@ -1,9 +1,9 @@
-object Form1: TForm1
+object TForm1: TTForm1
   Left = 522
   Height = 240
   Top = 215
   Width = 423
-  Caption = 'Form1'
+  Caption = 'HELLO FGT'
   ClientHeight = 240
   ClientWidth = 423
   OnCreate = FormCreate
